added a refresh button

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,7 @@ h1 McChunkie's brain
 
 p
   | You can click the header to sort by a column. nub
+button( id='refresh' )
+  | refresh
+
 div( id='brain' )
